<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.activity.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary">

        <include
            android:id="@+id/header"
            layout="@layout/view_header_core" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_space_new"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/now_playing"
                style="@style/TextContentWhiteBold"/>

            <include
                android:id="@+id/view_error_now_playing"
                layout="@layout/view_error_core"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/progress_bar_now_playing"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_now_playing"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/extra_small_space_10_new"
                tools:listitem="@layout/item_card_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/extra_small_space_10_new"
                android:text="@string/popular"
                style="@style/TextContentWhiteBold"/>

            <ProgressBar
                android:id="@+id/progress_bar_popular"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_popular"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/extra_small_space_10_new"
                tools:listitem="@layout/item_card_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

            <TextView
                android:id="@+id/tv_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/extra_small_space_10_new"
                android:text="@string/top_rated"
                style="@style/TextContentWhiteBold"/>

            <ProgressBar
                android:id="@+id/progress_bar_top_rated"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_top_rated"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/extra_small_space_10_new"
                tools:listitem="@layout/item_card_list"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        </LinearLayout>


    </LinearLayout>
</layout>