<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.rezabintami.movies.view.activity.detailmovies.DetailMoviesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary">

        <include
            android:id="@+id/view_error"
            layout="@layout/view_error_core" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/im_poster"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:scaleType="centerCrop"
                    tools:src="@drawable/spiderman"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_title"
                        style="@style/TextContentWhiteBold"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/extra_small_space"
                        android:layout_marginTop="@dimen/small_space_new"
                        android:textSize="@dimen/fontsize_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/favoriteButton"
                        app:layout_constraintTop_toBottomOf="@id/im_poster"
                        app:layout_constraintBottom_toTopOf="@id/tv_popularity"
                        tools:text="Spiderman " />

                    <com.google.android.material.floatingactionbutton.FloatingActionButton
                        android:id="@+id/favoriteButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/extra_small_space"
                        android:backgroundTint="@color/secondPrimary"
                        android:contentDescription="@string/favorite"
                        android:src="@drawable/ic_not_favorite_white"
                        android:tint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/im_poster"
                        app:layout_constraintBottom_toTopOf="@id/tv_title"
                        app:rippleColor="@color/primary"/>

                    <TextView
                        android:id="@+id/tv_popularity"
                        style="@style/TextContentGrey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_space_new"
                        android:layout_marginHorizontal="@dimen/extra_small_space"
                        android:text="@string/popularity"
                        android:textSize="@dimen/fontsize_14"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_title"
                        />

                    <TextView
                        android:id="@+id/tv_popularity_value"
                        style="@style/TextContentGrey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/small_space"
                        android:textSize="@dimen/fontsize_14"
                        app:layout_constraintBottom_toBottomOf="@id/tv_popularity"
                        app:layout_constraintStart_toEndOf="@id/tv_popularity"
                        app:layout_constraintTop_toTopOf="@id/tv_popularity"
                        tools:text="8.4" />

                    <TextView
                        android:id="@+id/tv_header_overview"
                        style="@style/TextContentWhiteBold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/extra_small_space"
                        android:layout_marginTop="@dimen/small_space_new"
                        android:text="@string/overview"
                        android:textSize="@dimen/fontsize_18"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_popularity" />

                    <TextView
                        android:id="@+id/tv_overview"
                        style="@style/TextContentGrey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="@dimen/extra_small_space"
                        android:textSize="@dimen/fontsize_16"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_header_overview"
                        app:layout_constraintEnd_toEndOf="parent"
                        tools:text="Nam pellentesque euismod consequat. Sed ornare, libero ut convallis bibendum, lacus ex tincidunt nulla, nec eleifend nibh lorem non enim. " />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>